--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <!-- useless tag from kidus -->
 
 
+
+
+
+
+        <!-- useless tag from kidu2223222s -->
+
     
     <script src="game.js"> </script>
 
